# flappy-tui

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/: the-bird-is-the-word.tape
src/: main.rs
