[package]
name = "flappy-tui"
version = "0.1.0"
edition = "2024"
description = "A Flappy Bird clone that runs in your terminal, with pixel graphics and sound"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NiltonVolpato/flappy-tui"
keywords = ["game", "terminal", "tui", "flappy-bird"]
categories = ["games", "command-line-utilities"]
exclude = ["assets/"]

[dependencies]
crossterm = "0.28"
fundsp = "0.23.0"
rodio = "0.20.1"

[profile.release]
opt-level = 3
